--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gdebi (0.9.5.7xmint3) serena; urgency=medium
+
+  [ muzena ]
+  * update hr.po
+
+  [ gogogogi ]
+  * Update hr.po
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 12 Dec 2016 09:57:14 +0000
+
 gdebi (0.9.5.7xmint2) serena; urgency=medium
 
   * Hide app menu item
