--- a/po/cs.po
+++ b/po/cs.po
@@ -620,11 +620,11 @@ msgstr "Poškozené závislosti"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Váš systém má rozbité závislosti. Dokud to nebude spraveno tak tato aplikace "
-"nemůže pokračovat. Pro spravení spusťte \"gksudo synaptic\" nebo \"sudo apt-"
+"nemůže pokračovat. Pro spravení spusťte \"pkexec synaptic\" nebo \"sudo apt-"
 "get install -f\" v terminálu."
 
 #: ../GDebi/GDebiCommon.py:100
