--- a/po/eo.po
+++ b/po/eo.po
@@ -616,11 +616,11 @@ msgstr "Rompitaj dependecoj"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Via sistemo enhavas rompitajn dependecojn. La instalado ne povas daŭri antaŭ "
-"ol tio estas riparita. Por ripari ĝin ruli 'gksudo synaptic' aŭ 'sudo apt-"
+"ol tio estas riparita. Por ripari ĝin ruli 'pkexec synaptic' aŭ 'sudo apt-"
 "get install -f' en terminala fenestro."
 
 #: ../GDebi/GDebiCommon.py:100
