--- a/po/hu.po
+++ b/po/hu.po
@@ -630,11 +630,11 @@ msgstr "Törött függőségek"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "A rendszeren törött függőségek vannak. Az alkalmazás a javításig nem képes "
-"folytatni a munkát. Próbálja meg terminálablakban futtatni a „gksudo "
+"folytatni a munkát. Próbálja meg terminálablakban futtatni a „pkexec "
 "synaptic” vagy „sudo apt-get install -f” parancsok egyikét."
 
 #: ../GDebi/GDebiCommon.py:100
