--- a/po/it.po
+++ b/po/it.po
@@ -635,11 +635,11 @@ msgstr "Dipendenze non integre"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Il sistema presenta delle dipendenze non integre. Impossibile procedere "
-"finché il problema non è risolto. Eseguire «gksudo synaptic» o «sudo apt-get "
+"finché il problema non è risolto. Eseguire «pkexec synaptic» o «sudo apt-get "
 "install -f» in un terminale."
 
 #: ../GDebi/GDebiCommon.py:100
