--- a/po/ms.po
+++ b/po/ms.po
@@ -620,11 +620,11 @@ msgstr "Dependensi rosak"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Sistem anda mempunyai dependensi rosak. Aplikasi ini tidak boleh dijalankan "
-"sehingga permasalahan ini dibetulkan. Untuk membaikinya jalankan 'gksudo "
+"sehingga permasalahan ini dibetulkan. Untuk membaikinya jalankan 'pkexec "
 "synaptic' atau 'sudo apt-get install -f' pada tetingkap terminal."
 
 #: ../GDebi/GDebiCommon.py:100
