--- a/po/pl.po
+++ b/po/pl.po
@@ -630,12 +630,12 @@ msgstr "Uszkodzone zależności"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "System zawiera problematyczne zależności. Ten program nie może kontynuować, "
 "dopóki nie zostanie to naprawione. Aby dokonać naprawy proszę uruchomić "
-"\"gksudo synaptic\" lub \"sudo apt-get install -f\" w oknie terminala."
+"\"pkexec synaptic\" lub \"sudo apt-get install -f\" w oknie terminala."
 
 #: ../GDebi/GDebiCommon.py:100
 #, python-format
