--- a/po/ur.po
+++ b/po/ur.po
@@ -622,11 +622,11 @@ msgstr "ٹوٹی انحصاریاں"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "آپ کا نظام ٹوٹی انحصاریاں رکھتا ہے. جب تک یہ درست نہیں کیا جائے گا یہ "
-"اطلاقیہ آگے نہیں بڑھے گا. اسے درست کرنے کے لیے ٹرمنل میں 'gksudo synaptic' "
+"اطلاقیہ آگے نہیں بڑھے گا. اسے درست کرنے کے لیے ٹرمنل میں 'pkexec synaptic' "
 "یا 'sudo apt-get install -f' چلائیں."
 
 #: ../GDebi/GDebiCommon.py:100
