--- a/README
+++ b/README
@@ -9,4 +9,4 @@ make it not close file descriptors, python-apt needs some new features.
 
 It will need root to install the deb, and it has a non-root non-root
 bit to view the deb and a "non-interactive" bit that is exec()ed with
-gksudo.
+pkexec.
