--- a/po/el.po
+++ b/po/el.po
@@ -628,11 +628,11 @@ msgstr "Κατεστραμμένες εξαρτήσεις"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Το σύστημα σας έχει κατεστραμμένες εξαρτήσεις. Η εφαρμογή αυτή δεν μπορεί να "
-"συνεχίσει, αν αυτό δεν διορθωθεί. Για να το διορθώσετε εκτελέστε 'gksudo "
+"συνεχίσει, αν αυτό δεν διορθωθεί. Για να το διορθώσετε εκτελέστε 'pkexec "
 "synaptic' ή 'sudo apt-get install -f' σε ένα τερματικό."
 
 #: ../GDebi/GDebiCommon.py:100
