--- a/po/gl.po
+++ b/po/gl.po
@@ -628,7 +628,7 @@ msgstr "Dependencias rotas"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "O seu sistema ten dependencias rotas. Este aplicativo non pode continuar ata "
