--- a/po/oc.po
+++ b/po/oc.po
@@ -633,12 +633,12 @@ msgstr "Dependéncias copadas"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Vòstre sistèma a de dependéncias copadas. Aquesta aplicacion pòt pas "
 "contunhar tant qu'aqueste problèma es pas resolgut. Per o remediar, aviatz "
-"« gksudo synaptic » o « sudo apt-get install -f » dins un terminal."
+"« pkexec synaptic » o « sudo apt-get install -f » dins un terminal."
 
 #: ../GDebi/GDebiCommon.py:100
 #, python-format
