--- a/po/tr.po
+++ b/po/tr.po
@@ -622,11 +622,11 @@ msgstr "Bozuk bağlılıklar"
 #: ../GDebi/GDebiCommon.py:79
 msgid ""
 "Your system has broken dependencies. This application can not continue until "
-"this is fixed. To fix it run 'gksudo synaptic' or 'sudo apt-get install -f' "
+"this is fixed. To fix it run 'pkexec synaptic' or 'sudo apt-get install -f' "
 "in a terminal window."
 msgstr ""
 "Sisteminizde bozuk bağımlılıklar var. Bu uygulama bu sorun düzeltilinceye "
-"kadar devam edemez. Sorunu düzeltmek için uçbirim penceresinde 'gksudo "
+"kadar devam edemez. Sorunu düzeltmek için uçbirim penceresinde 'pkexec "
 "synaptic' veya 'sudo apt-get install -f'yi çalıştırın."
 
 #: ../GDebi/GDebiCommon.py:100
