--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+gdebi (0.9.5.7xmint6) tara; urgency=medium
+
+  [ Robin Groppe ]
+  * Update de.po (#7)
+
+  [ Clement Lefebvre ]
+  * Switch to pkexec
+  * Stop building gdebi-kde
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 26 Apr 2018 18:50:46 +0100
+
 gdebi (0.9.5.7xmint5) sylvia; urgency=medium
 
   [ Sketch ]
