--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gdebi (0.9.5.7xmint7) tara; urgency=medium
+
+  * Pkexec: Remove message and add vendor info
+  * Remove KDE client
+  * Use mint-common to install packages
+
+ -- Clement Lefebvre <root@linuxmint.com>  Wed, 06 Jun 2018 13:13:10 +0100
+
 gdebi (0.9.5.7xmint6) tara; urgency=medium
 
   [ Robin Groppe ]
