--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gdebi (0.9.5.7xmint11) wilma; urgency=medium
+
+  * Don't recommend lintian
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 26 Feb 2024 13:42:14 +0000
+
 gdebi (0.9.5.7xmint10) ulyana; urgency=medium
 
   [ Adam Roussel ]
